feat[Outline]: V0 - Ideias de construção do modelo - Necessário modificações para teste

--- a/config.config
+++ b/config.config
@@ -4,9 +4,14 @@ buffer_size = 100
 learning_rate = 1e-3
 eps = 1000
 batch_size = 256
+step=10
+score_goal = 10
 
 [SAC]
 tau = 0.005
 alpha = 0.01
 hidden_dims = 256
+
+[Save Model]
+path=''
 
